# sd_metaviewer

./: .gitignore  LICENSE  README.md  Run_SDMetaViewer.bat  build.bat  build.sh  build_folder.bat  pyproject.toml  requirements.txt  run.py  run.sh
src/: __init__.py  app.py  extractor.py  parsers.py  utils.py
